<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="What_does_this_do">What does this do?</string>
    <string name="login_name">Login Name</string>
    <string name="password">Password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">Checkbox</string>
    <string name="Next">Login</string>
    <string name="previous">previous</string>
    <string name="dialog_message"> Do you want to exit?</string>
    <string name="dialog_title">Do you want to go back?</string>
    <string name="toast_message_invalid_email">Invalid email address</string>
    <string name="toast_message_invalid_password">Invalid password</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="response_1">Here is my response</string>
    <string name="ok">yes</string>
    <string name="cancel">no</string>
    <string name="Button">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="messageEditText">Type your message...</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
...
