<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radiobutton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="154dp"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="201dp"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:minHeight="48dp"
        android:text="@string/What_does_this_do"
        tools:text="What does this do? " />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="SpeakableTextPresentCheck" />

</GridLayout>